k8s/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-v1
  namespace: mlops-demo
spec:
  replicas: 2
  selector: { matchLabels: { app: sentiment, version: v1 } }
  template:
    metadata:
      labels: { app: sentiment, version: v1 }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: app
          image: imdb-svc:v1
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8080 }]
          readinessProbe: { httpGet: { path: /healthz, port: 8080 }, initialDelaySeconds: 5, periodSeconds: 5 }
          livenessProbe:  { httpGet: { path: /healthz, port: 8080 }, initialDelaySeconds: 10, periodSeconds: 10 }
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits:   { cpu: "500m", memory: "512Mi" }
