k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-svc
  namespace: mlops-demo
spec:
  selector: { app: sentiment }  # ВАЖНО: матчим обе версии v1 и v2
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
